made a slight change to the code

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,4 +2,37 @@
   font-family: 'Montserrat Alternates', sans-serif;
   text-align: center;
   color: #1f3147;
+  background-color: #9ccccd;
+  letter-spacing: 1px;
+}
+
+form {
+  font-weight: bolder;
+  margin-top: 50px;
+  padding: 50px 50px;
+  border-radius: 25%;
+  input {
+    max-width: 50px;
+  }
+}
+
+button {
+  background-color: #9ba39c;
+  color: white;
+  margin-left: 10px;
+  color: white;
+  padding: 2px 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+hr {
+  max-width: 500px;
+}
+
+h1 {
+  margin-top: 50px;
 }
